--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-env": "^1.5.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.11.1",
+    "mongoose": "4.10",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
