--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-jest": "^20.0.3",
     "jest": "^20.0.4",
     "nodemon": "^1.11.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "supertest": "^3.0.0"
   },
   "babel": {
     "presets": [
