--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.5.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "mongoose": "4.10",
     "morgan": "^1.8.2"
   },
